# ma2005b

./: LICENSE
Tareas-Reto/Tarea_1/: dns_mx_traza.pcapng  script.py
Tareas-Reto/Tarea_3/: dnssec_queries.pcapng  dnssec_queries.py  dnssec_queries_2.py  script_dnssec.py
Tareas-Reto/Tarea_4/: dnssec_analysis_extended.ipynb  dnssec_resumen_extendido.csv  dominios.txt  resultados.json
cli-tool/: dnssec_cli.py
dnssec-toolkit/: .gitignore  pyproject.toml  requirements.txt  setup.py
dnssec-toolkit/dnssec_tool/: cli.py  dig.py  parse.py  parser.py  pcap.py  resolver_chain.py  tree.py  validator.py
