[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "dnssec-toolkit"
version = "1.0.0"
description = "A professional CLI toolkit for DNSSEC scanning and DNS forensic analysis."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "pyshark",
    "dnspython"
]

[project.scripts]
dnssec-cli = "dnssec_tool.cli:main"
